# know-my-professor

./: .dockerignore  .gitignore  README.md  entrypoint.py  pyproject.toml  requirements.txt
api/: Dockerfile  app.py  cloudbuild.yaml  requirements.txt
core/: pipeline.py
core/llm/: generator.py  prompts.py
core/query/: analyzer.py  embedder.py
core/retrieval/: base.py  pinecone_retriever.py
deploy/: Dockerfile  api.cloudbuild.yaml  frontend.cloudbuild.yaml  job.cloudbuild.yaml
frontend/: .dockerignore  Dockerfile  cloudbuild.yaml
ingest/: .dockerignore  Dockerfile  chunking.py  config.py  embedding.py  gcs.py  ingest.py  pinecone_store.py  requirements.txt
preprocessing/ingest/: chunking.py  embedding.py  pinecone_store.py  runner.py
preprocessing/sources/profiles/: fetcher.py  models.py  profile_parser.py  runner.py
preprocessing/sources/weblinks/: crawl.py  extract.py  runner.py
scraper/: .dockerignore  Dockerfile  config.py  fetcher.py  models.py  profile_parser.py  requirements.txt  scraper.py  stores.py
serving/api/: app.py
serving/frontend/: app.py
shared/: config.py  gcs.py
tests/: README.md  conftest.py  test_core.py  test_e2e_live.py  test_ingest.py  test_scraper.py  test_weblinks.py
weblinks/: Dockerfile  config.py  crawl.py  extract.py  gcs.py  requirements.txt  weblinks.py
